# aure-lang

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
docs/: language-guide.md
docs/superpowers/plans/: 2026-06-22-aure-language.md
docs/superpowers/specs/: 2026-06-22-aure-language-design.md
examples/: collections.aure  fibonacci.aure  hello.aure  pipeline.aure
src/aure/: __init__.py  cli.py  errors.py  lexer.py  parser.py  runtime.py
tests/: test_cli.py  test_language.py
