[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aure-lang"
version = "1.0.0"
description = "Aure, a small practical programming language with a readable Python reference interpreter."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Benjamin Dupin" }
]
keywords = ["language", "interpreter", "programming-language", "aure"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Interpreters"
]

[project.scripts]
aure = "aure.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
